--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,17 +25,18 @@ Imports:
     BiocParallel,
     grDevices,
     stats,
+    lwgeom,
     Matrix,
     Metrics,
     proxyC,
     RcppParallel,
+    raster,
     alphahull,
     igraph,
-    rgeos,
     shotGroups,
     sp,
+    spatstat,
     spatstat.geom,
-    maptools,
     entropy,
     data.table,
     grr
