add reading functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,9 @@ export(generatePolygon)
 export(processingRef)
 export(processingSPE)
 export(readBIDCell)
+export(readMatrixMask_per_sample)
+export(readSimpleSeg)
+export(readSimpleSeg_per_sample)
 export(readTiffOutput)
 export(readVizgen)
 export(readXenium)
